# clbench-verifiers

./: .gitignore  README.md  pyproject.toml
clbench_verifiers/: __init__.py  env.py  eval.py  notepad.py  parsing.py  rubric.py  system.py  train.py
configs/: poker_qwen2_5_1_5b.toml  poker_qwen2_5_1_5b_notepad.toml  prime_qwen3_5_2b.toml  prime_qwen3_5_2b_db_explore_notepad.toml  prime_qwen3_5_2b_icl.toml  prime_qwen3_5_2b_no_memory.toml  prime_qwen3_5_2b_notepad.toml  prime_qwen3_5_2b_smoke.toml
docs/: PRIME.md  onepager.docx
environments/clbench-poker/: README.md  pyproject.toml
environments/clbench-poker/.prime/: .env-metadata.json
environments/clbench-poker/clbench_poker/: __init__.py  clbench_poker.py
environments/clbench-poker/clbench_poker/data/: database_exploration_questions.json
notebooks/: train_poker.ipynb
scripts/: colab_run_training.py  colab_setup.sh  eval_remote.py
tests/: test_env_smoke.py
