[project]
name = "clbench-poker"
description = "Continual Learning Bench `exploitable_poker` task as a verifiers MultiTurnEnv. Optional icl_notepad-style structured memory."
tags = ["continual-learning", "tool-use", "memory", "poker", "train", "eval"]
version = "0.1.6"
requires-python = ">=3.10"
authors = [{ name = "sr-networks" }]
license = { text = "Apache-2.0" }

dependencies = [
    "verifiers>=0.1.12",
    # Pull the env wrapper, parser, rubric, notepad helpers from the glue repo.
    "clbench-verifiers @ git+https://github.com/sr-networks/clbench-verifiers.git@main",
    # CLBench itself + the poker extra. We point at our fork because the
    # upstream pyproject pins requires-python>=3.13, which blocks Prime's
    # 3.12-based env-server CI. The fork only relaxes that pin; periodic
    # rebases keep us current with upstream changes.
    "cl-benchmark @ git+https://github.com/sr-networks/continual-learning-bench.git@main",
    "texasholdem==0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Required because two of our deps are pulled directly from git
# (clbench-verifiers from this repo, cl-benchmark from upstream).
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["clbench_poker/**/*.py", "pyproject.toml", "README.md"]

# Prime's evaluation defaults — when this env is used as an `[[eval.env]]`
# block in a training config, these kick in unless overridden.
[tool.verifiers.eval]
num_examples = 8
rollouts_per_example = 4
